# NeuralHive

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
neuralhive/: __init__.py  agent.py  hive.py  memory.py
neuralhive/topologies/: __init__.py  consensus.py  router.py  supervisor.py
tests/: test_hive.py
